# allsomojo

./: .gitignore  README.md  deploy.py  pyproject.toml
allsomojo/: cli.py  common.py  core.py  db.py  files.py  ghub.py  gitops.py  sheet.py
